Fix spacing issues in css

--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,9 @@ html {
   font-family: Merriweather, serif;
 }
 
-.calendar,td,th {
+.calendar,
+td,
+th {
   border: 1px solid #ccc;
 }
 
